<resources>
    <string name="app_name">복권번호 생성기</string>

    // activity_main
    <string name="lotto">로또</string>
    <string name="pension">연금복권</string>
    <string name="clear">목록 초기화</string>
    <string name="menu">메뉴</string>

    // activity_winning_number
    <string name="draw_date">추첨 날짜</string>
    <string name="draw_numbers">당첨 번호</string>
    <string name="draw_bonus_number">보너스</string>
    <string name="total_sell_amount">총 판매금액</string>
    <string name="winner_total_amount">1등 총액</string>
    <string name="winner_count">1등 개수</string>
    <string name="winner_each_amount">인당 수령액</string>
    <string name="explain_draw_day">회차는 일요일 0시에 최신화됩니다</string>
    <string name="explain_edittext">회차를 기입해주세요</string>
    <string name="winner_search">검색</string>

    // fragment_roulette
    <string name="roulette_help">
        \n
        1. 룰렛을 돌리고 멈추면 룰렛 상단에 선택된 숫자가 표시됩니다 (이미 뽑힌 숫자는 표시되지 않습니다)\n\n
        2. 선택된 숫자를 클릭하고 위에 뜬 엑스표를 누르면 해당 숫자가 삭제됩니다\n\n
        3. 숫자는 삭제된 공간을 포함해서 앞에서부터 채워집니다\n\n
        4. 초기화버튼을 누르면 선택된 모든 숫자가 삭제됩니다
        \n
    </string>
    <string name="roulette_spin">돌리기</string>
    <string name="roulette_clear">초기화</string>

    // fragment_analytics_random_pick
    <string name="analytics_random_pick">무작위 번호 분석</string>
    <string name="analytics_random_pick_help">
        \n
        1부터 45까지의 숫자를 무작위로 10만번 돌려서 나온 빈도 수를 오름차순으로 보여줍니다.
        \n
    </string>

    // navigation items
    <string name="navigation_random">랜덤번호</string>
    <string name="navigation_roulette">룰렛랜덤</string>
    <string name="navigation_analytics">번호분석</string>
    <string name="navigation_winning_number">당첨확인</string>

</resources>