<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/button1"
        android:layout_width="160sp"
        android:layout_height="80sp"
        android:text="@string/lotto"
        android:textSize="24sp"
        android:textColor="@color/deep_blue"
        android:background="@drawable/button_background"
        android:layout_marginBottom="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recyclerView"
        app:layout_constraintVertical_bias="0.9" />

    <Button
        android:id="@+id/button2"
        android:layout_width="160sp"
        android:layout_height="80sp"
        android:background="@drawable/button_background"
        android:text="@string/pension"
        android:textColor="@color/deep_blue"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button1"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/main_bt_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:textColor="@color/deep_blue"
        android:text="@string/clear"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@id/recyclerView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/number_tv"
        app:layout_constraintHorizontal_bias="0.95"
        />

    <TextView
        android:id="@+id/number_tv"
        android:layout_width="match_parent"
        android:layout_height="128sp"
        android:gravity="center"
        android:textSize="40sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/main_bt_clear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="360sp"
        android:layout_marginStart="12sp"
        android:layout_marginEnd="12sp"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_bt_clear" />

</androidx.constraintlayout.widget.ConstraintLayout>